Write 298 words for See Also in Flyweight.

--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -316,6 +316,21 @@ data for a terrain type smeared across a bunch of methods. It would be really ni
 <p>I say "almost" here because the performance bean counters will rightfully want to know how this compares to the perf of using an enum. Storing a pointer to the object implies an indirect lookup: to get to some terrain data like the movement cost, you first have to follow the pointer in the grid to find the terrain object, and then find the movement cost there. Chasing a pointer like this can cause a cache miss, which can slow things down.</p>
 <p>As always, the golden rule of optimization is <em>profile first</em>. Modern computer hardware is too complex for performance to be a game or pure reason anymore. In my tests, there was no noticeable difference between using an enum or a flyweight object. If anything, the latter was a bit faster. But that&#x2019;s entirely dependent on how other stuff was laid out in memory.</p>
 <p>What I <em>am</em> confident is that using flyweight objects shouldn&#x2019;t be dismissed out of hand here. I think they often give you the advantages of an object-oriented style&thinsp;&mdash;&thinsp;mainly encapsulation&thinsp;&mdash;&thinsp;without the expense of tons of objects. If you find yourself creating an enum and doing lots of switches on it, it&#x2019;s worth trying this pattern instead. If it turns out you need to sacrifice that for speed, at least do the tests yourself to make sure there actually is a speed cost first.</p>
+<h2><a href="#see-also" name="see-also">See Also</a></h2>
+<ul>
+<li>
+<p>In the tile example, we just eagerly created an instance for each terrain type and stored it in <code>Battlefield</code>. That made it easy to find and reuse the one shared instance. In many cases, though, you won&#x2019;t want to create all of the flyweights up front.</p>
+<p>If you don&#x2019;t know which ones you&#x2019;ll actually need, it&#x2019;s better to create them as needed. To get the advantage of sharing, when you go to "create" one, you&#x2019;ll first see if you&#x2019;ve already created an identical one. If so, you just return that instance.</p>
+<p>This usually means that you&#x2019;ll have to encapsulate construction behind some interface that can first look for an existing object. Hiding a constructor like this is an example of the <a href="http://en.wikipedia.org/wiki/Factory_method_pattern" class="gof-pattern">Factory Method</a> pattern.</p>
+<p>In order to return a previously created flyweight, you&#x2019;ll have to keep track of the pool of them that you&#x2019;ve already instantiated. As the name implies, that means that an <a href="object-pool.html" class="pattern">Object Pool</a> might be a helpful place to store them.</p>
+</li>
+<li>
+<p>When you&#x2019;re using the <a class="pattern" href="state.html">State</a>, you sometimes have state objects that don&#x2019;t have any, uh, state, that&#x2019;s specific to the machine that the state is being used in. The state&#x2019;s identity alone is enough to be useful. In that case, you can apply this pattern and reuse that same state instance in multiple state machines at the same time without any problems.</p>
+</li>
+<li>
+<p>This pattern requires the flyweight object not have any state specific to the context in which it appears. Sometimes that&#x2019;s easy, but other times there&#x2019;s a <em>little</em> bit of context that it would be useful for a method in the flyweight object to have access to. Since it can&#x2019;t <em>store</em> that data, the only option is to pass it into the method. When you do, that&#x2019;s the <a href="context-parameter.html" class="pattern">Context Parameter</a> pattern.</p>
+</li>
+</ul>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
